--- a/settings.html
+++ b/settings.html
@@ -9,6 +9,7 @@
     input { width: 100%; padding: 8px; margin: 10px 0; }
     button { padding: 10px 20px; }
     p { margin: 20px 0; }
+    pre { background: #f4f4f4; padding: 10px; overflow-x: auto; }
   </style>
 </head>
 <body>
@@ -17,22 +18,16 @@
   <input type="text" id="apiKey" placeholder="Your API key">
   <button onclick="saveApiKey()">Save API Key</button>
   <p>After saving, bookmark this page, then edit the bookmark and replace its URL with the code below:</p>
-  <pre id="bookmarkletCode"></pre>
+  <pre id="bookmarkletCode">javascript:(function(){var k=localStorage.getItem('elevenLabsApiKey');if(!k){k=prompt('Enter your 11 Labs API Key:');if(k){localStorage.setItem('elevenLabsApiKey',k);}else{alert('API key required. Visit https://rjcrp.github.io/read-by-ai/settings.html');return;}}var s=document.createElement('script');s.src='https://rjcrp.github.io/read-by-ai/readability.js';s.onload=function(){var a=new Readability(document).parse();var t=a?a.textContent:document.body.innerText;fetch('https://api.elevenlabs.io/v1/text-to-speech/UgBBYS2sOqTuMpoF3BR0',{method:'POST',headers:{'Content-Type':'application/json','xi-api-key':k},body:JSON.stringify({text:t})}).then(r=>r.json()).then(d=>{if(d.audio_url){window.open(d.audio_url,'_blank');}else{alert('Failed to generate audio');}}).catch(e=>{console.error(e);alert('Error generating audio');});};document.head.appendChild(s);})();</pre>
   <script>
     function saveApiKey() {
-      const apiKey = document.getElementById('apiKey').value;
-      if (apiKey) {
-        localStorage.setItem('elevenLabsApiKey', apiKey);
-        alert('API Key saved! Now bookmark this page and update its URL with the code below.');
-        generateBookmarkletCode();
-      } else {
-        alert('Please enter an API key.');
+      const apiKey = document.getElementById('apiKey').value.trim();
+      if (!apiKey) {
+        alert('Please enter your 11 Labs API key.');
+        return;
       }
-    }
-
-    function generateBookmarkletCode() {
-      const bookmarklet = `javascript:(function(){var s=document.createElement('script');s.src='https://rjcrp.github.io/read-by-ai/readability.js';s.onload=function(){var a=new Readability(document).parse();var t=a?a.textContent:document.body.innerText;var k=localStorage.getItem('elevenLabsApiKey');if(!k){alert('Please set your API key at https://rjcrp.github.io/read-by-ai/settings.html');return;}fetch('https://api.elevenlabs.io/v1/text-to-speech/STREAM', {method:'POST',headers:{'Content-Type':'application/json','xi-api-key':k},body:JSON.stringify({text:t,voice_id:'UgBBYS2sOqTuMpoF3BR0'})}).then(r=>r.json()).then(d=>{if(d.audio_url){window.open(d.audio_url,'_blank');}else{alert('Failed to generate audio');}}).catch(e=>{console.error(e);alert('Error generating audio');});};document.head.appendChild(s);})();`;
-      document.getElementById('bookmarkletCode').textContent = bookmarklet;
+      localStorage.setItem('elevenLabsApiKey', apiKey);
+      alert('API Key saved! Now bookmark this page and update its URL with the code above.');
     }
   </script>
 </body>
